export const snapshot = {};

snapshot[`snapshot test all of the merge options > merge, should generate the correct git commands, should end on target branch 1`] = `
[
  "git show-ref --verify --quiet refs/heads/main",
  'git log  --pretty=format:"[[⬛]]%H[⬛]%s[⬛]%B[⬛]%an[⬛]%ae[⬛]%cn[⬛]%ce[⬛]%ci[⬛]%P[⬛]%D" --numstat main',
  "git checkout feature",
  "git branch --show-current",
  "git pull origin success",
  "git checkout main",
  "git branch --show-current",
  "git pull origin success",
  'git config user.name "Deployment Test"',
  'git config user.email "test@test.com"',
  "git checkout main",
  'git merge feature -m "Merge pull request #123 from feature" -m "" --no-ff',
  "git branch --show-current",
  "git show-ref --verify --quiet refs/heads/success",
  'git log  --pretty=format:"[[⬛]]%H[⬛]%s[⬛]%B[⬛]%an[⬛]%ae[⬛]%cn[⬛]%ce[⬛]%ci[⬛]%P[⬛]%D" --numstat success',
]
`;

snapshot[`snapshot test all of the merge options > squash, should generate the correct git commands, should end on target branch 1`] = `
[
  "git show-ref --verify --quiet refs/heads/main",
  'git log  --pretty=format:"[[⬛]]%H[⬛]%s[⬛]%B[⬛]%an[⬛]%ae[⬛]%cn[⬛]%ce[⬛]%ci[⬛]%P[⬛]%D" --numstat main',
  "git checkout feature",
  "git branch --show-current",
  "git pull origin success",
  "git checkout main",
  "git branch --show-current",
  "git pull origin success",
  'git config user.name "Deployment Test"',
  'git config user.email "test@test.com"',
  "git checkout feature",
  "git rebase main",
  "git rev-list --count main..feature",
  "git reset --soft HEAD~3",
  'git commit -m "title-here" -m "message-here"',
  "git checkout main",
  'git merge feature -m "title-here" -m "message-here" --ff-only',
  "git branch --show-current",
  "git show-ref --verify --quiet refs/heads/success",
  'git log  --pretty=format:"[[⬛]]%H[⬛]%s[⬛]%B[⬛]%an[⬛]%ae[⬛]%cn[⬛]%ce[⬛]%ci[⬛]%P[⬛]%D" --numstat success',
]
`;

snapshot[`snapshot test all of the merge options > rebase, should generate the correct git commands, should end on target branch 1`] = `
[
  "git show-ref --verify --quiet refs/heads/main",
  'git log  --pretty=format:"[[⬛]]%H[⬛]%s[⬛]%B[⬛]%an[⬛]%ae[⬛]%cn[⬛]%ce[⬛]%ci[⬛]%P[⬛]%D" --numstat main',
  "git checkout feature",
  "git branch --show-current",
  "git pull origin success",
  "git checkout main",
  "git branch --show-current",
  "git pull origin success",
  'git config user.name "Deployment Test"',
  'git config user.email "test@test.com"',
  "git checkout feature",
  "git rebase main",
  "git checkout main",
  'git merge feature -m "title-here" -m "message-here" --ff-only',
  "git branch --show-current",
  "git show-ref --verify --quiet refs/heads/success",
  'git log  --pretty=format:"[[⬛]]%H[⬛]%s[⬛]%B[⬛]%an[⬛]%ae[⬛]%cn[⬛]%ce[⬛]%ci[⬛]%P[⬛]%D" --numstat success',
]
`;
